fix: adjust font sizes for caption and link inputs, update icon reference, and enhance input visibility toggling

--- a/src/index.css
+++ b/src/index.css
@@ -52,13 +52,12 @@
   }
 
   &__caption {
-    font-size: 15px;
+    font-size: 14px;
     border: 1px solid #e8e8eb;
     border-radius: 6px;
     outline: none;
     padding: 10px;
     line-height: 1.4;
-    background: #ffffff;
 
     &[contentEditable="true"][data-placeholder]::before {
       content: attr(data-placeholder);
@@ -72,13 +71,12 @@
   }
 
   &__link {
-    font-size: 15px;
+    font-size: 14px;
     border: 1px solid #e8e8eb;
     border-radius: 6px;
     outline: none;
     padding: 10px;
     line-height: 1.4;
-    background: #ffffff;
 
     &[contentEditable="true"][data-placeholder]::before {
       content: attr(data-placeholder);
@@ -92,7 +90,7 @@
   }
 
   &--empty {
-    ^&__image {
+    .image-tool__image {
       display: none;
 
       &-preloader {
@@ -103,11 +101,11 @@
 
   &--empty,
   &--uploading {
-    ^&__caption {
+    .image-tool__caption {
       display: none;
     }
 
-    ^&__link {
+    .image-tool__link {
       display: none;
     }
   }
@@ -128,7 +126,7 @@
       display: none;
     }
 
-    ^&__image {
+    .image-tool__image {
       &-preloader {
         display: none;
       }
@@ -136,7 +134,7 @@
   }
 
   &--uploading {
-    ^&__image {
+    .image-tool__image {
       min-height: 200px;
       display: flex;
       border: 1px solid var(--border-color);
@@ -158,14 +156,14 @@
    */
 
   &--withBorder {
-    ^&__image {
+    .image-tool__image {
       border: 1px solid var(--border-color);
     }
   }
 
   &--withBackground {
-    ^&__image {
-      padding: 15px;
+    .image-tool__image {
+      padding: 14px;
       background: var(--bg-color);
 
       &-picture {
@@ -176,7 +174,7 @@
   }
 
   &--stretched {
-    ^&__image {
+    .image-tool__image {
       &-picture {
         width: 100%;
       }
@@ -189,7 +187,7 @@
    */
 
   &--size-small {
-    ^&__image {
+    .image-tool__image {
       &-picture {
         max-width: 25%;
         margin: 0 auto;
@@ -198,7 +196,7 @@
   }
 
   &--size-medium {
-    ^&__image {
+    .image-tool__image {
       &-picture {
         max-width: 50%;
         margin: 0 auto;
@@ -207,7 +205,7 @@
   }
 
   &--size-full {
-    ^&__image {
+    .image-tool__image {
       &-picture {
         max-width: 100%;
         width: 100%;
@@ -221,7 +219,7 @@
    */
 
   &--alignment-left {
-    ^&__image {
+    .image-tool__image {
       &-picture {
         margin: 0 auto 0 0;
       }
@@ -229,7 +227,7 @@
   }
 
   &--alignment-center {
-    ^&__image {
+    .image-tool__image {
       &-picture {
         margin: 0 auto;
       }
@@ -237,7 +235,7 @@
   }
 
   &--alignment-right {
-    ^&__image {
+    .image-tool__image {
       &-picture {
         margin: 0 0 0 auto;
       }
